fix: update the station z-index

--- a/src/common/components/StationItem/styles.module.scss
+++ b/src/common/components/StationItem/styles.module.scss
@@ -12,6 +12,7 @@
   border-radius: 18px;
   box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.20);
   position: relative;
+  z-index: 1;
 
   &:hover {
     scale: 1.02;
